--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <section>
-      <h1>Rocket</h1>
+      <h1>himitsu</h1>
       <model-viewer
         src="himitsu.glb"
         ios-src="himitsu.usdz"
