--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex, nofollow">
-    <title>Himitsu</title>
+    <title>よせがき</title>
     <link rel="stylesheet" href="style.css">
     <!-- Import the component -->
     <script
@@ -18,7 +18,7 @@
   </head>
   <body>
     <section>
-      <h1>himitsu</h1>
+      <h1>よせがき</h1>
       <model-viewer
         src="himitsu.glb"
         ios-src="himitsu.usdz"
